--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "@types/regenerator-runtime": "^0.13.5",
+    "@types/uuid": "^11.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
