fix: Major Improvements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foloup-app",
+  "name": "infynno-ai-interview-platform-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
